--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -282,60 +282,68 @@
 });
 
 </script>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAteM4P82ZpVfZHUA-greFhVVphVI9UcI0&signed_in=true"></script>
 	<script type="text/javascript">
     	$(document).ready(function() {
                 $("#example1").DataTable();
                 $("#example2").DataTable();
-        });             
-    </script>
+        });
 
-     <script>
+        var map;
+        var infowindow;
+        var locations = {};
+        var i = 0;
+        var loc_size;
+        {% for k in all %}
+            var a = {% get_current_location k.presiding_officer %};
+            if(a[0] != 0.0 && a[1] != 0.0){
+                var title = '{{k.presiding_officer.full_name}} ({{k.presiding_officer.polling_station.name}})';
+                var contentString = '<div id="content">'+
+                    '<div id="siteNotice">'+
+                    '</div>'+
+                    '<h3 id="firstHeading" class="firstHeading">{{k.presiding_officer.polling_station.name}}</h3>'+
+                    '<div id="bodyContent">'+
+                    '<p><b>Presiding Officer : </b> {{k.presiding_officer.full_name}}' +
+                    '<br/><b>Total Voters : </b> {{k.presiding_officer.polling_station.total_voters}}' +
+                    '<br/><b>Current Voters : </b> {% current_voters k.presiding_officer.polling_station %}' +
+                    '<br/><b>Current Voting %age : </b> {% current_vote_percentage k.presiding_officer.polling_station %}' +
+                    '</p>'+
+                    '</div>'+
+                    '</div>';
 
-
-	function initMap() {
-	  var myLatLng = {lat: 24.5, lng: 92.5};
-
-	  var map = new google.maps.Map(document.getElementById('map'), {
-	    zoom: 8,
-	    center: myLatLng
-	  });
-
-
-		{% for k in all %}
-		  var a = {% get_current_location k.presiding_officer %};
-		  if(a[0] != 0.0 && a[1] != 0.0){
-              myLatLng = { lat: a[0] , lng: a[1] };
-              var contentString = '<div id="content">'+
-              '<div id="siteNotice">'+
-              '</div>'+
-              '<h3 id="firstHeading" class="firstHeading">{{k.presiding_officer.polling_station.name}}</h3>'+
-              '<div id="bodyContent">'+
-              '<p><b>Presiding Officer : </b> {{k.presiding_officer.full_name}}' +
-              '<br/><b>Total Voters : </b> {{k.presiding_officer.polling_station.total_voters}}' +
-              '<br/><b>Current Voters : </b> {% current_voters k.presiding_officer.polling_station %}' +
-              '<br/><b>Current Voting %age : </b> {% current_vote_percentage k.presiding_officer.polling_station %}' +
-              '</p>'+
-              '</div>'+
-              '</div>';
-              var infowindow = new google.maps.InfoWindow({
-                    content: contentString
-              });
-              var marker = new google.maps.Marker({
-                position: myLatLng,
-                map: map,
-                title: '{{k.presiding_officer.full_name}} ({{k.presiding_officer.polling_station.name}})'
-              });
-              marker.addListener('click', function() {
-                infowindow.open(map, marker);
-              });
-          }
+                locations[i] = [title, contentString, a[0], a[1], i]
+                i++;
+            }
         {% endfor %}
-}
+        loc_size = i;
+        var origin = new google.maps.LatLng(locations[0][2], locations[0][3]);
 
+        function initMap(){
+            var mapOptions = {
+                zoom: 10,
+                center: origin
+            };
+            map = new google.maps.Map(document.getElementById('map'), mapOptions);
+            infowindow = new google.maps.InfoWindow();
+            for(i=0; i<loc_size; i++){
+                var position = {lat: locations[i][2], lng: locations[i][3]};
+                var title = locations[i][0];
+                var marker = new google.maps.Marker({
+                    position: position,
+                    map: map,
+                    title: title
+                });
+                google.maps.event.addListener(marker, 'click', (function(marker, i) {
+                    return function() {
+                        infowindow.setContent(locations[i][1]);
+                        infowindow.setOptions({maxWidth: 200});
+                        infowindow.open(map, marker);
+                    }
+                }) (marker, i));
+            }
+        }
+        google.maps.event.addDomListener(window, 'load', initMap);
     </script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAteM4P82ZpVfZHUA-greFhVVphVI9UcI0&signed_in=true&callback=initMap"></script>
 
 
 
