--- a/templates/login.html
+++ b/templates/login.html
@@ -52,7 +52,13 @@
             </div><!-- /.col -->
           </div>
         </form>
-
+        <div class="text-center">
+          <br/>
+          <p>Developed By</p>
+          <p>
+            <a href="http://nits.ac.in" target="_blank"><img src="http://www.nits.ac.in/images/logofinal.png" height="40px" width="43px"> NIT Silchar,</a> For DC Cachar, Assam
+           </p>
+        </div>
       </div><!-- /.login-box-body -->
     </div><!-- /.login-box -->
 
