--- a/templates/messages.html
+++ b/templates/messages.html
@@ -60,7 +60,9 @@
 {% block page_js %}
     <script type="text/javascript">
     	$(document).ready(function() {
-                $("#example1").DataTable();
+                $("#example1").DataTable({
+                    "order": [[ 5, "desc" ]]
+                });
         });
     </script>
 {% endblock %}
