--- a/templates/messages_sent.html
+++ b/templates/messages_sent.html
@@ -40,7 +40,9 @@
 {% block page_js %}
     <script type="text/javascript">
     	$(document).ready(function() {
-                $("#example1").DataTable();
+                $("#example1").DataTable({
+                    "order": [[ 2, "desc" ]]
+                });
         });
     </script>
 {% endblock %}
