--- a/templates/pollingstation_list.html
+++ b/templates/pollingstation_list.html
@@ -8,7 +8,7 @@
             <div class="col-md-12">
                 <div class="box box-primary">
                     <div class="box-header">
-                        <h3 class="box-title">Inbox</h3>
+                        <h3 class="box-title"></h3>
                     </div><!-- /.box-header -->
                     <div class="box-body table-responsive">
                     
@@ -36,7 +36,7 @@
                                     <td>{{ poll.latitude }}</td>
                                     <td>{{ poll.longitude }}</td>
                                     <td>{% if poll.condition %}
-                                    		poll.get_condition_display
+                                    		{{ poll.get_condition_display }}
                                     	{% endif %}
                                     </td>
                                 </tr>
