--- a/templates/pollingstationview.html
+++ b/templates/pollingstationview.html
@@ -38,7 +38,7 @@
                 <span class="info-box-icon bg-aqua"><i class="ion ion-android-archive"></i></span>
 
                 <div class="info-box-content">
-                  <span class="info-box-text">Received EVM</span>
+                  <span class="info-box-text">Vote %age</span>
                   <span class="info-box-number">{% current_vote_percentage polling_station %}</span>
                 </div>
                 <!-- /.info-box-content -->
