[FIXED] else if to elif

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -32,7 +32,7 @@
                                     <td>
                                         {% if s.solved %}
                                             Solved
-                                        {% elseif %}
+                                        {% elif %}
                                             Not Solved
                                         {% endif %}
                                     </td>
