--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -143,8 +143,7 @@
                                     <td>{{ k.presiding_officer.username }}</td>
                                     <td>{{k.presiding_officer.full_name}}</td>
                                     <td>{{k.presiding_officer.polling_station.name}}</td>
-                                    <!-- TODO remove below query causing delay in response -->
-                                    <td>{% ps_percentage[k.presiding_officer.polling_station.id] %}%</td>
+                                    <td>{{ ps_percentage[k.presiding_officer.polling_station.id] }}%</td>
 									{% if k.received_evm %}
 									<td style="text-align : center"> <span class ="glyphicon glyphicon-ok " style = "color:green; vertical-align:middle" ></span><br>{{k.received_evm_timestamp}}</td>
 									{% else %}
@@ -325,8 +324,8 @@
                     '<div id="bodyContent">'+
                     '<p><b>Presiding Officer : </b> {{k.presiding_officer.full_name}}' +
                     '<br/><b>Total Voters : </b> {{k.presiding_officer.polling_station.total_voters}}' +
-                    '<br/><b>Current Voters : </b> {% ps_cv[k.presiding_officer.polling_station.id] %}' +
-                    '<br/><b>Current Voting %age : </b> {% ps_percentage[k.presiding_officer.polling_station.id] %}%' +
+                    '<br/><b>Current Voters : </b> {{ ps_cv[k.presiding_officer.polling_station.id] }}' +
+                    '<br/><b>Current Voting %age : </b> {{ ps_percentage[k.presiding_officer.polling_station.id] }}%' +
                     '</p>'+
                     '</div>'+
                     '</div>';
