[OPTIMIZATION] Reduced SQL queries on various pages /views/

--- a/templates/presidingofficer_list.html
+++ b/templates/presidingofficer_list.html
@@ -27,7 +27,7 @@
                             	<tr>
                                     <td>{{ o.username }}</td>
                                     <td><a href = "{% url 'PresidingOfficerView' pk=o.id %}" >{{ o.full_name }}</a></td>
-                                    <td>{{ o.polling_station }}</td>
+                                    <td>{{ o.polling_station.name }}</td>
                                     <td>{{ o.last_login }}</td>
                                     <td>{{ o.last_logout }}</td>
                                 </tr>
