NITS Logo from https:// and removed one more extra query on Dashboard

--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
           <br/>
           <p>Developed By</p>
           <p>
-            <a href="http://nits.ac.in" target="_blank"><img src="http://www.nits.ac.in/images/logofinal.png" height="40px" width="43px"> NIT Silchar,</a> For DC Cachar, Assam
+            <a href="http://nits.ac.in" target="_blank"><img src="{% static 'main/images/nitslogo.png' %}" height="40px" width="43px"> NIT Silchar,</a> For DC Cachar, Assam
            </p>
         </div>
       </div><!-- /.login-box-body -->
