--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -111,9 +111,20 @@
               <!-- /.info-box -->
             </div>
         </div>
-        <div class="col-md-3 col-sm-6 col-xs-12" id="donut-example" style="height: 250px;"></div>
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="box">
+                    <div class="box-header">
+                        <h3 class="box-title">Polling Station Condition</h3>
+                    </div><!-- /.box-header -->
+                    <div class="box-body">
+                        <div id="donut-example" style="position: relative; height: 300px;"></div>
+                    </div><!-- /.box-body -->
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="box">
                     <div class="box-header">
                         <h3 class="box-title">Presiding Officer Status</h3>
@@ -222,7 +233,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-md-6 col-sm-12 col-xs-12">
                 <div class="box">
                     <div class="box-header">
                         <h3 class="box-title">Location of Presiding Officers</h3>
@@ -232,7 +243,7 @@
                     </div><!-- /.box-body -->
                 </div><!-- /.box -->
             </div>
-            <div class="col-xs-6">
+            <div class="col-md-6 col-sm-12 col-xs-12">
                 <div class="box">
                     <div class="box-header">
                         <h3 class="box-title">Polling Station Status</h3>
@@ -294,9 +305,9 @@
   element: 'donut-example',
   colors: ["#00a65a", "#3c8dbc", "#f56954"],
   data: [
-    {label: "Polling Station Condition\nGood", value: {{good}}},
-    {label: "Polling Station Condition\nOk", value: {{ok}}},
-    {label: "Polling Station Condition\nBad", value: {{bad}}}
+    {label: "Good", value: {{good}}},
+    {label: "Normal", value: {{ok}}},
+    {label: "Bad", value: {{bad}}}
   ]
 });
 
